--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prisma": "^6.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.3",
     "vite-tsconfig-paths": "^5.1.4"
   },
